@@ -406,7 +406,7 @@
 (defun print-color (color stream depth)
   (declare (type color color)
 	   (ignore depth))
-  (printing-object (color stream)
+  (print-unreadable-object (color stream :type t)
     (prin1 (color-red color) stream)
     (princ " " stream)
     (prin1 (color-green color) stream)
@@ -527,7 +527,7 @@
 (defun print-display (display stream depth)
   (declare (type display display)
 	   (ignore depth))
-  (printing-object (display stream)
+  (print-unreadable-object (display stream :type t)
     (princ (display-host display) stream)
     (princ ":" stream)
     (princ (display-display display) stream)
@@ -548,7 +548,7 @@
 (defun print-drawable (drawable stream depth)
   (declare (type drawable drawable)
 	   (ignore depth))
-  (printing-object (drawable stream)
+  (print-unreadable-object (drawable stream :type t)
     (princ (display-host (drawable-display drawable)) stream)
     (princ ":" stream)
     (princ (display-display (drawable-display drawable)) stream)
@@ -579,7 +579,7 @@
 (defun print-visual-info (visual-info stream depth)
   (declare (type visual-info visual-info)
 	   (ignore depth))
-  (printing-object (visual-info stream)
+  (print-unreadable-object (visual-info stream :type t)
     (prin1 (visual-info-bits-per-rgb visual-info) stream)
     (princ "-bit " stream)
     (princ (visual-info-class visual-info) stream)
@@ -599,7 +599,7 @@
 (defun print-colormap (colormap stream depth)
   (declare (type colormap colormap)
 	   (ignore depth))
-  (printing-object (colormap stream)
+  (print-unreadable-object (colormap stream :type t)
     (when (colormap-visual-info colormap)
       (princ (visual-info-class (colormap-visual-info colormap)) stream)
       (princ " " stream))
@@ -617,7 +617,7 @@
 (defun print-cursor (cursor stream depth)
   (declare (type cursor cursor)
 	   (ignore depth))
-  (printing-object (cursor stream)
+  (print-unreadable-object (cursor stream :type t)
     (princ (display-host (cursor-display cursor)) stream)
     (princ ":" stream)
     (princ (display-display (cursor-display cursor)) stream)
@@ -718,7 +718,7 @@
 (defun print-gcontext (gcontext stream depth)
   (declare (type gcontext gcontext)
 	   (ignore depth))
-  (printing-object (gcontext stream)
+  (print-unreadable-object (gcontext stream :type t)
     (princ (display-host (gcontext-display gcontext)) stream)
     (princ ":" stream)
     (princ (display-display (gcontext-display gcontext)) stream)
@@ -851,7 +851,7 @@
 (defun print-screen (screen stream depth)
   (declare (type screen screen)
 	   (ignore depth))
-  (printing-object (screen stream)
+  (print-unreadable-object (screen stream :type t)
     (let ((display (drawable-display (screen-root screen))))
       (princ (display-host display) stream)
       (princ ":" stream)
@@ -907,7 +907,7 @@
 (defun print-font (font stream depth)
   (declare (type font font)
 	   (ignore depth))
-  (printing-object (font stream)
+  (print-unreadable-object (font stream :type t)
     (if (font-name font)
 	(princ (font-name font) stream)
       (princ "(gcontext)" stream))
