@@ -44,6 +44,8 @@ o Some ansi common lisp stuff.  If you have :ansi-common-lisp on *features*,
 
   - Use the dynamic-extent declaration for rest args and closures.
 
+  - Use print-unreadable-object.
+
 o Code compiled with the R4 and R4.1 CLX will work with the R4.2 CLX, provided
   you don't have :ansi-common-lisp on your features list.  Code compiled with 
   the R4.2 CLX will NOT work with the R4 CLX.
